# SDL2GameDev

./: .gitignore  CMakeLists.txt  LICENSE  README.md  note.md
01_hello_SDL/: CMakeLists.txt
RecoverMemory/: CMakeLists.txt
RecoverMemory/assets/: RecoverMemory.tmx
RecoverMemory/src/: CMakeLists.txt  main.cpp
cmake/: dep.cmake  global.cmake  sdl2.cmake  tmx.cmake  util.cmake
share/pkgconfig/: zlib.pc
study/: CMakeLists.txt
study/01_hello_SDL/: 01_hello_SDL.cpp  CMakeLists.txt
study/02_getting_an_image_on_the_screen/: CMakeLists.txt
study/03_event_driven_programming/: CMakeLists.txt
study/04_key_presses/: 04_key_presses.cpp  CMakeLists.txt
study/05_optimized_surface_loading_and_soft_stretching/: 05_optimized_surface_loading_and_soft_stretching.cpp  CMakeLists.txt
study/06_extension_libraries_and_loading_other_image_formats/: CMakeLists.txt
study/07_texture_loading_and_rendering/: CMakeLists.txt
study/08_geometry_rendering/: 08_geometry_rendering.cpp  CMakeLists.txt
study/09_the_viewport/: CMakeLists.txt
study/10_color_keying/: CMakeLists.txt
study/11_clip_rendering_and_sprite_sheets/: CMakeLists.txt
study/12_color_modulation/: CMakeLists.txt
study/13_alpha_blending/: 13_alpha_blending.cpp  CMakeLists.txt
study/14_animated_sprites_and_vsync/: 14_animated_sprites_and_vsync.cpp  CMakeLists.txt
study/15_rotation_and_flipping/: CMakeLists.txt
study/16_true_type_fonts/: CMakeLists.txt
study/17_mouse_events/: CMakeLists.txt
study/18_key_states/: CMakeLists.txt
study/19_gamepads_and_joysticks/: CMakeLists.txt
(+23 files in other folders)
